Updated CityController, CityService, JS frontend, added ResourceNotFoundException